<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="segmentos">
        <item>Subida</item>
        <item>Bajada</item>
        <item>Det. Alto</item>
        <item>Det. Bajo</item>
    </string-array>

    <string-array name="ecuaciones">
        <item>Ciclodial</item>
        <item>MAS</item>
        <item>4-5-6-7</item>
        <item>3-4-5</item>
    </string-array>

    <string-array name="pasos">
        <item>1</item>
        <item>0.1</item>
        <item>0.01</item>
    </string-array>
</resources>