<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RadialLinealActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:navigationIcon="@drawable/flecha_atras_violeta"
        app:titleTextColor="@color/black" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:text="@string/radia_lineal"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/cargar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:src="@drawable/cargar"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/gs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/generaci_n_de_svaj"
            android:textSize="34sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_rec"
            android:gravity="fill_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_rec"
                android:gravity="fill_horizontal"
                android:orientation="horizontal"
                android:padding="16dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/segundos"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.SwitchCompat
                    style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
                    android:id="@+id/toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/gradosCap"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/round_rec"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="5dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etVelocidadlo"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/velocidad"
                    android:textColor="@color/black_select"
                    app:boxStrokeColor="@color/black_select"
                    app:hintTextColor="@color/black_select">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etVelocidad"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:background="@drawable/round_input"
                        android:textColor="@color/black"
                        android:inputType="numberDecimal"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPasolo"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/paso"
                    android:textColor="@color/black_select"
                    app:boxStrokeColor="@color/black_select"
                    app:hintTextColor="@color/black_select">

                    <AutoCompleteTextView
                        android:id="@+id/etPaso"
                        android:layout_width="150dp"
                        android:layout_height="52dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:background="@drawable/round_input"
                        android:textColor="@color/black"
                        android:inputType="none"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".55"
                android:text="@string/tramos"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/guardarTramo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".20"
                android:padding="4dp"
                android:src="@drawable/save"
                />

            <ImageView
                android:id="@+id/limpiarTramos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".20"
                android:padding="4dp"
                android:src="@drawable/delete"
                />

            <TextView
                android:id="@+id/agregarTramos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".9"
                android:padding="6dp"
                android:text="@string/agregar_tramos"
                android:textAlignment="textEnd"
                android:textColor="@color/purpuraDark"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/purpuraDark" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/lista"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dividerHeight="4dp"
                android:divider="@android:color/transparent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="100dp"
                android:descendantFocusability="afterDescendants"
                android:focusable="false"
                />

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">
                <include layout="@layout/bottom_sheet_layout" />
            </androidx.coordinatorlayout.widget.CoordinatorLayout>
        </FrameLayout>

    </LinearLayout>

</LinearLayout>
