...
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:hint="@string/eje_x"
            android:layout_marginHorizontal="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eje"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#7B1FA2"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textAlignment="center"
...

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/alturalo"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:hint="@string/altura">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/altura"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#7B1FA2"
...
